mlruns/0/c0d1de789ab04a91a775b9dda454e297/params/pipeline.error

---------------------------------------------------------------------------
Exception encountered at "In [13]":
  Cell In[13], line 11
    md = "
         ^
SyntaxError: unterminated string literal (detected at line 11)

